<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_preferences"
          android:title="@string/preference"
          android:showAsAction="never"
          android:icon="@android:drawable/ic_menu_manage"/>

    <item android:id="@+id/menu_filter_channels"
          android:title="@string/filter_channels"
          android:showAsAction="never"
          android:icon="@drawable/ic_menu_filter"/>

    <item android:id="@+id/menu_choixChaine"
          android:title="@string/choixChaine"
          android:icon="@android:drawable/ic_menu_more"
          android:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_choixDate"
          android:title="@string/choixDate"
          android:icon="@android:drawable/ic_menu_today"
          android:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_help"
          android:title="@string/help"
          android:icon="@android:drawable/ic_menu_help"
          android:showAsAction="never"/>

</menu>